# NeuraDocPrivacy

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GITHUB_SETUP.md  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pdf_masker.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
tests/: __init__.py  test_pdf_masker.py
